--- a/hw24/hw24.tex
+++ b/hw24/hw24.tex
@@ -50,7 +50,7 @@
 
 \thispagestyle{plain}
 \begin{flushright}
-\large{\textbf{TYPE YOUR NAME HERE \\
+\large{\textbf{Geoffrey Parker - grp352 \\
 HW 23: 4.27, 4.31 - 4.35\\
 M328K \\
 April 24th, 2012 \\}}
